Fixed redirect + removed images when screen too small

--- a/client/src/components/LandingPage/index.css
+++ b/client/src/components/LandingPage/index.css
@@ -29,9 +29,18 @@ section {
 }
 
 .CirclePictures {
-  
   margin-left:12rem;
   margin-top:2rem;
+}
+@media screen and (max-width: 1485px) {
+  .CirclePictures {
+    display: none;
+  }
+}
+@media screen and (min-width:1970px) {
+  .CirclePictures {
+    display: none;
+  }
 }
 
 .TextBlurb {
@@ -108,6 +117,7 @@ background: rgba(235, 235, 245, .8);
 .Dashboards { 
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .DashboardBlurb {
@@ -115,7 +125,8 @@ background: rgba(235, 235, 245, .8);
   flex-direction: column;
   font-family: 'SF-Pro-Display';
   font-style: normal;
-  padding-right: 25px;
+  margin-right: 25px;
+  margin-bottom: 25px;
 }
 
 .DashboardBlurb h1 {
