--- a/client/src/components/TeamMember/index.css
+++ b/client/src/components/TeamMember/index.css
@@ -51,6 +51,9 @@
   color: #0A84FF;
 }
 .TeamMemberBlurb img {
-  height: 15rem;
+  width: 15rem;
+  aspect-ratio: 1 / 1;
+  display: block;
   margin-left: 10px;
+  border-radius: 10rem;
 }
